add card expand feature

--- a/imp_gridsystem/index.html
+++ b/imp_gridsystem/index.html
@@ -15,7 +15,6 @@
 <body>
   <div class="navbar bg-dark">
     <div class="navbar-wrapper">
-
       <div class="brand">
         Hello World
       </div>
@@ -188,25 +187,132 @@
   </div>
 
   <div class="wrapper">
-    <div class="col3">
+    <div class="col4">
       <h2>Image</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fugiat veritatis doloremque est voluptate modi consectetur eius praesentium nisi maiores. Modi earum minima natus assumenda temporibus magni mollitia pariatur explicabo.</p>
     </div>
-    <div class="col3">
+    <div class="col4">
       <img class="image shadow-1" src="https://picsum.photos/1024/1024?random=1" alt="">
       <img class="image" src="https://picsum.photos/1024/1024?random=2" alt="">
       <img class="image" src="https://picsum.photos/1024/1024?random=3" alt="">
     </div>
-    <div class="col3">
+    <div class="col4">
       <img class="image thumbnail shadow-1" src="https://picsum.photos/1024/1024?random=4" alt="">
       <img class="image thumbnail" src="https://picsum.photos/1024/1024?random=5" alt="">
       <img class="image thumbnail" src="https://picsum.photos/1024/1024?random=6" alt="">
     </div>
-    <div class="col3">
-      <img class="image rounded shadow-1" src="https://picsum.photos/1024/1024?random=7" alt="">
-      <img class="image rounded" src="https://picsum.photos/1024/1024?random=8" alt="">
-      <img class="image rounded" src="https://picsum.photos/1024/1024?random=9" alt="">
+  </div>
+  <div class="wrapper">
+    <div class="col4">
+      <h2>Expand Card</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, natus? Repudiandae, expedita! Natus libero delectus, magni consequatur accusantium necessitatibus ad! Quisquam provident suscipit sit, ipsa ipsam nisi consectetur reprehenderit doloribus!</p>
+    </div>
+    <div class="col8">
+      <div class="panel-container" id="pc-1">
+        <div class="panel active" style="background-image: url('https://picsum.photos/1080/1080?random=82');">
+          <div class="panel-body">
+            <h3 class="panel-title">
+              Lorem ispum dolor.
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+            </p>
+          </div>
+        </div>
+        <div class="panel" style="background-image: url('https://picsum.photos/1080/1080?random=83');">
+          <div class="panel-body">
+            <h3 class="panel-title">
+              Lorem ispum dolor.
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+            </p>
+          </div>
+        </div>
+        <div class="panel" style="background-image: url('https://picsum.photos/1080/1080?random=86');">
+          <div class="panel-body">
+            <h3 class="panel-title">
+              Lorem ispum dolor.
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+            </p>
+          </div>
+        </div>
+        <div class="panel" style="background-image: url('https://picsum.photos/1080/1080?random=85');">
+          <div class="panel-body">
+            <h3 class="panel-title">
+              Lorem ispum dolor.
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+            </p>
+          </div>
+        </div>
+        <div class="panel" style="background-image: url('https://picsum.photos/1080/1080?random=84');">
+          <div class="panel-body">
+            <h3 class="panel-title">
+              Lorem ispum dolor.
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card card-primary shadow-1 mt-2">
+        <div class="card-title">
+          Hello
+        </div>
+        <div class="card-body">
+          <div class="panel-container" id="pc-2">
+            <div class="panel active" style="background-image: url('https://picsum.photos/1080/1080?random=5');">
+              <div class="panel-body">
+                <h3 class="panel-title">
+                  Lorem ispum dolor.
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+                </p>
+              </div>
+            </div>
+            <div class="panel" style="background-image: url('https://picsum.photos/1080/1080?random=6');">
+              <div class="panel-body">
+                <h3 class="panel-title">
+                  Lorem ispum dolor.
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+                </p>
+              </div>  
+            </div>
+            <div class="panel" style="background-image: url('https://picsum.photos/1080/1080?random=7');">
+              <div class="panel-body">
+                <h3 class="panel-title">
+                  Lorem ispum dolor.
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+                </p>
+              </div>
+            </div>
+            <div class="panel" style="background-image: url('https://picsum.photos/1080/1080?random=8');">
+              <div class="panel-body">
+                <h3 class="panel-title">
+                  Lorem ispum dolor.
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus maxime officia aliquid placeat, vero earum eos. Ipsam iste, sequi praesentium consectetur maiores nesciunt voluptatibus, magnam saepe numquam atque provident?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+  <script src="./card.js"></script>
 </body>
 </html>
